make updating of addRule/removeRule/insertRule work cf. http://www.quirksmode.org/dom/w3c_css.html#change

BUG: 57159


svn path=/branches/KDE/3.5/kdelibs/; revision=555957